k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-example
spec:
  selector:
    app: example-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
#  type: LoadBalancer
# MAKE SURE IT IS ClusterIP since the nginx ingress controller will be the load balancer
