k8s/ingress_ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - www.lab4iottest.xyz
    # - hw2.your_domain
    secretName: hello-kubernetes-tls
  rules:
  - host: "www.lab4iottest.xyz"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-service-example
            port:
              number: 80
